{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 15,
  "lineage": "96cecf52-7a19-e32a-7158-6a25908e8327",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b72404c2b8bc8df",
            "domain": "vpc",
            "id": "eipalloc-09b72404c2b8bc8df",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-132-156-223.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.156.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:internet-gateway/igw-0fcbd4ae763e83a23",
            "id": "igw-0fcbd4ae763e83a23",
            "owner_id": "432675872383",
            "tags": {
              "Name": "Internet_Gateway"
            },
            "tags_all": {
              "Name": "Internet_Gateway"
            },
            "vpc_id": "vpc-01b97ffd1ea9f13cc"
          },
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b72404c2b8bc8df",
            "connectivity_type": "public",
            "id": "nat-02ec4aff0fdbe0cad",
            "network_interface_id": "eni-0af9e652adbb7418a",
            "private_ip": "172.20.10.253",
            "public_ip": "18.132.156.223",
            "subnet_id": "subnet-030669586680dc2f0",
            "tags": {
              "Name": "Nat-Gateway_Project"
            },
            "tags_all": {
              "Name": "Nat-Gateway_Project"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:route-table/rtb-07b0622a25d06dc16",
            "id": "rtb-07b0622a25d06dc16",
            "owner_id": "432675872383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ec4aff0fdbe0cad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b97ffd1ea9f13cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:route-table/rtb-06acc7c71e0961781",
            "id": "rtb-06acc7c71e0961781",
            "owner_id": "432675872383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcbd4ae763e83a23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Internet Gateway"
            },
            "tags_all": {
              "Name": "Route Table for Internet Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b97ffd1ea9f13cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce93c9669738924",
            "route_table_id": "rtb-07b0622a25d06dc16",
            "subnet_id": "subnet-073bbe3d7932f4f4f"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY",
            "aws_route_table.NAT-Gateway-RT",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e63ead04f3230a94",
            "route_table_id": "rtb-06acc7c71e0961781",
            "subnet_id": "subnet-030669586680dc2f0"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ansible_Tomcat-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:security-group/sg-0ec019e6f1c96c515",
            "description": "Tomcat Access only from the Webserver Instances!",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from MySQL",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec019e6f1c96c515",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a226d1dc96b3efc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Tomcat Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a226d1dc96b3efc"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Ansible_Tomcat-sg",
            "name_prefix": "",
            "owner_id": "432675872383",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b97ffd1ea9f13cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.WS-SG",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:security-group/sg-07a226d1dc96b3efc",
            "description": "HTTP, PING, SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from webserver",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a226d1dc96b3efc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for webserver",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "432675872383",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b97ffd1ea9f13cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:subnet/subnet-030669586680dc2f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030669586680dc2f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "432675872383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-01b97ffd1ea9f13cc"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:subnet/subnet-073bbe3d7932f4f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073bbe3d7932f4f4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432675872383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-01b97ffd1ea9f13cc"
          },
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:432675872383:vpc/vpc-01b97ffd1ea9f13cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0cb436bb681d82ec9",
            "default_route_table_id": "rtb-0934c8dab117b0583",
            "default_security_group_id": "sg-00ff71a9a5ad855b5",
            "dhcp_options_id": "dopt-00a5f65ed10d635b9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01b97ffd1ea9f13cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0934c8dab117b0583",
            "owner_id": "432675872383",
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            }
          }
        }
      ]
    }
  ]
}